--- a/public/css/security.css
+++ b/public/css/security.css
@@ -172,4 +172,15 @@ input[type=email]:focus {
 
 /* ----------- LOGIN --------------- */
 
+#tournoi>div {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(51, 41, 174, 0.5);
+    gap: 10px;
+    padding: 10px;
+}
 
+.tox.tox-tinymce {
+    width: 100%;
+    height: 300px;
+}
