Fixes + CSS du form create tournoi

--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello EquipeController!
+{% block title %} Nom équipe ici
 {% endblock %}
 
 {% block body %}{% endblock %}
