--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+<meta name="description" content="Enregistrez-vous pour défiez les meilleurs" />
 {% block title %}Se connecter
 {% endblock %}
 {% block stylesheets %}
