--- a/public/css/security.css
+++ b/public/css/security.css
@@ -175,12 +175,74 @@ input[type=email]:focus {
 #tournoi>div {
     display: flex;
     flex-direction: column;
-    background-color: rgba(51, 41, 174, 0.5);
     gap: 10px;
     padding: 10px;
 }
 
 .tox.tox-tinymce {
     width: 100%;
-    height: 300px;
+    height: auto;
+}
+
+.tr-form-wrapper {
+    padding: 20px;
+    background-color: rgba(52, 41, 174, 0.7);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.tr-create-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.jeuTournoi {
+    padding: 10px;
+    background-color: rgba(52, 41, 174, 0.7);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    color: white;
+}
+
+.jeuTournoi:focus {
+    outline: none;
+    border: 2px solid rgb(255, 255, 255);
+    background-color: #3329AE;
+    color: white;
+}
+
+option:hover {
+    background-color: rgb(255, 255, 255);
+}
+
+.jeuTournoi:hover {
+    cursor: pointer;
+    border: 2px solid rgb(255, 255, 255);
+    background-color: #3329AE;
+    color: white;
+
+}
+
+#tournoi div input {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgba(52, 41, 174, 0.7);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    color: white;
+}
+
+#tournoi div input:focus {
+    outline: none;
+    border: 2px solid rgb(255, 255, 255);
+    background-color: #3329AE;
+    color: white;
+}
+
+.vich-image input {
+    padding: 10px;
 }
