--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,8 +16,6 @@
 	{% block stylesheets %}
 	<link rel="stylesheet" href="{{ asset('css/style.css') }}" />
 	{% endblock %}
-	{#
-	<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> #}
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,7 +30,7 @@
 		<div class="overlay"></div>
 		<main id="main-container">
 			{% block sidebar %}
-			{{ include ('include/sidebar.html.twig') }}
+				{{ include ('include/sidebar.html.twig') }}
 			{% endblock %}
 
 			<div id="content"> {% block body %}{% endblock %}
