--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -1,10 +1,8 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Chat{% endblock %}
-
-{% block meta %}
 <meta name="description" content="Bienvenue sur notre chat. Communiquez avec d'autres utilisateurs.">
 <meta name="keywords" content="chat, communication, messages">
+{% block title %}Chat{% endblock %}
+{% block meta %}
 {% endblock %}
 
 {% block stylesheets %}
@@ -27,7 +25,7 @@
                 <img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil par défaut">
                 {% endif %}
                 <a class="room-pseudo" href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">
-                    <h2>{{utilisateur.pseudo}}</h2>
+                    <h2>{{utilisateur.pseudo}} :</h2>
                 </a>
             </div>
             {% endif %}
