--- a/templates/tournoi/edit.html.twig
+++ b/templates/tournoi/edit.html.twig
@@ -1,13 +1,9 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Edit Tournoi{% endblock %}
+<meta name="description" content="Editez votre tournoi">
+{% block title %}Edition du tournoi {{ tournoi.nomTournoi }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Tournoi</h1>
-
+    <h1>Edition du tournoi {{ tournoi.nomTournoi }}</h1>
     {{ include('tournoi/_form.html.twig', {'button_label': 'Update'}) }}
-
-
-
     {{ include('tournoi/_delete_form.html.twig') }}
 {% endblock %}
