--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,26 +8,19 @@
 		{% block title %}Bienvenue !
 		{% endblock %}
 	</title>
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	{% block stylesheets %}
 	<link rel="stylesheet" href="{{ asset('css/style.css') }}" />
 	{% endblock %}
-	{#
-	<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> #}
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 	<div id="wrapper">
 		<header class="mobile-header">
 			<i class="fa-solid fa-bars"></i>
-			<img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="logo" />
+			<img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="Logo VictoryForge, accueil." />
 		</header>
 		<div class="overlay"></div>
 		<main id="main-container">
@@ -51,6 +43,18 @@
 			</div>
 		</main>
 	</div>
+	<footer>
+		<p>&copy; 2024 VictoryForge, Inc</p>
+		<div class="user-utilities">
+			<a href="{{ path('app_condition') }}">
+				Conditions d'utilisation
+			</a>
+			<a href="{{ path('app_confidentialite') }}">
+				Politique de confidentialité
+			</a>
+		</div>
+	</footer>
+
 	{% block javascripts %}
 	{# {{ encore_entry_script_tags('app') }} #}
 	<script src="{{ asset('js/script.js') }}"></script>
