participer & quitter tournoi (equipe ou solo)

--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -6,8 +6,8 @@
 
 </head>
 <body>
-    {% block sidebar %}
+    {# {% block sidebar %}
 		{{ include ('include/sidebar.html.twig') }}
-	{% endblock %}
+	{% endblock %} #}
 </body>
 </html>
