--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
-<meta name="description" content="Bienvenue sur notre chat. Communiquez avec d'autres utilisateurs.">
-<meta name="keywords" content="chat, communication, messages">
+{% block meta %}
+    <meta name="description" content="Bienvenue sur notre chat. Communiquez avec d'autres utilisateurs.">
+    <meta name="keywords" content="chat, communication, messages">
+{% endblock %}
 {% block title %}Chat{% endblock %}
 {% block meta %}
 {% endblock %}
