--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-<meta name="description" content="Enregistrez-vous pour défiez les meilleurs" />
+{% block meta %}
+	<meta name="description" content="Enregistrez-vous pour défiez les meilleurs" />
+{% endblock %}
 {% block title %}Se connecter
 {% endblock %}
 {% block stylesheets %}
