--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="Site pour organiser et participer à vos tournois favoris" />
+	{% block meta %}
+		<meta name="description" content="Site pour organiser et participer à vos tournois favoris" />
+	{% endblock %}
 	<title>
 		{% block title %}Bienvenue !
 		{% endblock %}
