--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 	<h1>Profil de {{ user.pseudo }}</h1>
-	{% if app. user and user.id != app.user.id %}
+	{% if app.user and user.id != app.user.id %}
 	<div class="action-btn">
 		<div><a href="#" id="invite-user" data-user-id={{user.id}}>Inviter dans mon équipe</a></div>
 		<div>
@@ -73,6 +73,20 @@
 <img style="width: clamp(30px, 50px, 50px);" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}"
 	alt="Logo d'un tournoi" />
 {% endfor %}
+
+<h2>Mes followers</h2>
+
+{% for item in followers %}
+	<p>{{item.follower.pseudo}}</p>
+{% endfor %}
+
+<h2>Les personnes que je follow</h2>
+
+{% for item in followings %}
+	<a href="">{{item.following.pseudo}}</a>
+{% endfor %}
+
+
 {% endblock %}
 
 {% block javascripts %}
