--- a/public/css/style.css
+++ b/public/css/style.css
@@ -677,18 +677,39 @@ button:disabled {
 
 /* LISTE DES PARTICIPANTS */
 
-.list-participants {
+.participant-tr {
   border-top: 1px solid rgb(255, 0, 0);
   border-bottom: 1px solid rgb(255, 0, 0);
-  width: fit-content;
+  width: 110px;
   padding: 10px;
   border-radius: 5px;
-  height: auto;
+  height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   color: white;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.participant-tr img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.nb-inscrits {
+  color: rgba(255, 255, 255, 0.5);
+  margin: 10px;
+}
+
+.participant-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 10px;
+  gap: 10px;
 }
 
 /* #participants,
