--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	{% block meta %}
+		<meta name="description" content="Site pour organiser et participer à vos tournois favoris" />
+	{% endblock %}
+	<title>
+		{% block title %}Bienvenue !
+		{% endblock %}
+	</title>
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('css/style.css') }}" />
+	{% endblock %}
 </head>
+
 <body>
-    {# {% block sidebar %}
-		{{ include ('include/sidebar.html.twig') }}
-	{% endblock %} #}
+    <header class="mobile-header">
+        <i class="fa-solid fa-bars"></i>
+        <img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="Logo VictoryForge, accueil." />
+    </header>
+    <div class="overlay"></div>
+    <main id="main-container">
+        {% block sidebar %}
+            {{ include ('include/sidebar.html.twig') }}
+        {% endblock %}
+
+        <div id="content"> {% block body %}{% endblock %}
+            {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+            {% endfor %}
+
+            {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+    </main>
+    
+    {% block javascripts %}
+    {# {{ encore_entry_script_tags('app') }} #}
+    <script src="{{ asset('js/script.js') }}"></script>
+    {% endblock %}
+    <script>
+        const openSidebar = document.querySelector('.fa-bars');
+        const sidebar = document.querySelector('#sidebar');
+        const overlay = document.querySelector('.overlay');
+
+        openSidebar.addEventListener('click', () => {
+            sidebar.classList.add('active');
+            overlay.classList.add('active');
+        });
+
+        overlay.addEventListener('click', () => {
+            sidebar.classList.remove('active');
+            overlay.classList.remove('active');
+        });
+
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const flashMessages = document.querySelectorAll('.alert');
+
+            flashMessages.forEach((flashMessage) => {
+                setTimeout(() => {
+                    flashMessage.style.display = 'none';
+                }, 4000);
+            });
+        });
+    </script>
 </body>
 </html>
