--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -1,10 +1,5 @@
-{% extends 'base.html.twig' %}
-{% block meta %}
-    <meta name="description" content="Bienvenue sur notre chat. Communiquez avec d'autres utilisateurs.">
-    <meta name="keywords" content="chat, communication, messages">
-{% endblock %}
-{% block title %}Chat{% endblock %}
-{% block meta %}
+{% extends 'base2.html.twig' %}
+{% block title %}Chat
 {% endblock %}
 
 {% block stylesheets %}
