--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {% block title %}VictoryForge | Inscription
 {% endblock %}
-
-{% block sidebar %}{% endblock %}
 
 {% block stylesheets %}
 	{{ parent() }}
