--- a/templates/tournoi/edit.html.twig
+++ b/templates/tournoi/edit.html.twig
@@ -3,6 +3,6 @@
 
 {% block body %}
     <h1>Edition du tournoi {{ tournoi.nomTournoi }}</h1>
-    {{ include('tournoi/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('tournoi/_form.html.twig', {'button_label': 'Valider'}) }}
     {{ include('tournoi/_delete_form.html.twig') }}
 {% endblock %}
