--- a/templates/game_match/new.html.twig
+++ b/templates/game_match/new.html.twig
@@ -1,10 +1,13 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 {% block title %}Créer un match
 {% endblock %}
 
 {% block body %}
 	<h1>Créer un match</h1>
 
-	{{ include("game_match/_form.html.twig") }}
+	{{ form_start(form) }}
+	{{ form_widget(form) }}
+	{{ form_end(form) }}
+
 
 {% endblock %}
