--- a/templates/include/profil_sidebar.html.twig
+++ b/templates/include/profil_sidebar.html.twig
@@ -1,30 +1,69 @@
 <div id="sidebar">
-	<img class="logo" src="{{ asset('img/logo.png') }}" alt="Logo victoryforge" />
+	<a href="{{ path('app_home') }}" class="logo">
+	<img src="{{ asset('img/logo.png') }}" alt="Logo victoryforge" />
+	</a>
 	<hr />
+	<div class="user-profil-pic">
 	{% if app.user and app.user.photo %}
-	<a href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">
-		<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
-	</a>
-	{% elseif app.user %}
-	<a href="{{ path('app_mon_profil') }}">
-		{# <img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil"> #}
-		<a href="">Personnaliser</a>
-	</a>
-	{% endif %}
-
+		<a class="profil-pic" href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">
+			<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
+			<a class="link-edit-profil" href="" >
+				<button>Personnaliser</button>
+			</a>
+		</a>
+		{% elseif app.user %}
+		<a class="profil-pic" href="{{ path('app_mon_profil') }}">
+			<img style="height: 100px; width: 100px;" src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
+			<a class="link-edit-profil" href="" >
+				<button>Personnaliser</button>
+			</a>
+		</a>
+		{% endif %}
+	</div>
 	<div class="profil-menu">
 		<ul style="list-style:none;">
 			<li>
-				<a href="{{ path('app_home') }}">Accueil</a>
+				<a href="{{ path('app_home') }}">
+					<span class="material-symbols-outlined">
+						home
+					</span>
+					Accueil
+				</a>
 			</li>
 			<li>
-				<a href="{{ path('app_mon_profil') }}">Profil</a>
+				<a href="{{ path('app_mon_profil') }}" {% if app.request.attributes.get('_route')=='app_mon_profil' %}
+				class="nav-item-active" {% endif %}>
+				<span class="material-symbols-outlined">
+					person
+				</span>
+				Profil
+			</a>
 			</li>
 			<li>
-				<a href="{{ path('app_mon_profil_param') }}">Paramètres du compte</a>
+				<a href="{{ path('app_mon_profil_param') }}" {% if app.request.attributes.get('_route')=='app_mon_profil_param' %}
+				class="nav-item-active" {% endif %}>
+				<span class="material-symbols-outlined">
+					settings
+				</span>
+				Paramètres du compte
+			</a>
 			</li>
 			<li>
-				<a href="{{ path('app_logout') }}">Se déconnecter</a>
+				<a href="{{ path('app_notification') }}" {% if app.request.attributes.get('_route')=='app_notification' %}
+				class="nav-item-active" {% endif %}>
+				<span class="material-symbols-outlined">
+					notifications
+				</span>
+				Notifications
+			</a>
+			</li>
+			<li>
+				<a href="{{ path('app_logout') }}">
+					<span class="material-symbols-outlined">
+						logout
+					</span>
+					Se déconnecter
+				</a>
 			</li>
 		</ul>
 	</div>
