--- a/templates/notification/index.html.twig
+++ b/templates/notification/index.html.twig
@@ -1,7 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Vos notifications{% endblock %}
-
+{% block sidebar %}
+	{{ include ('include/profil_sidebar.html.twig') }}
+{% endblock %}
 {% block body %}
 
+<h1>Les notifications</h1>
+<br>
+{% for notif in notifications %}
+    <hr>
+    <div>
+        <p>{{ notif.texte }}</p>
+        <p>{{ notif.createdAt|date('d/m/Y H:i') }}</p>
+        <form action="{{ path('decline_invitation', {'id': notif.id}) }}" method="post">    
+            <input type="submit" value="Refuser">
+        </form>
+        <form action="{{ path('accept_invitation', {'id': notif.id}) }}" method="post">    
+            <input type="submit" value="Accepter">
+        </form>
+    </div>
+    <hr>
+{% endfor %}
 {% endblock %}
